# BiometricLib

./: .gitignore  CMakeLists.txt  CMakeLists.txt_cv2  CMakeLists.txt_cv3  Dockerfile  READMD.md  build-xcode.sh  build.sh  build_2.4.sh  build_3.1.sh  createXcodeProj.sh  dockerbuild.sh  dockerrun.sh  doxgen.conf
eyetrack/: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  Screen Recording 2026-03-10 at 10.35.52 PM.mov  TRACEABILITY.md  docker-compose.yml  masterplan.md  problem..md  round2.md
eyetrack/build-ffi/: Makefile
eyetrack/client/: pubspec.yaml
eyetrack/client/lib/: main.dart
eyetrack/client/scripts/: build_eyetrack.sh
eyetrack/client/test/: protobuf_test.dart  widget_test.dart
eyetrack/cmake/: FindMosquitto.cmake  FindONNXRuntime.cmake  aarch64-toolchain.cmake
eyetrack/config/: edge.yaml  mosquitto.conf  pipeline.yaml  server.yaml
eyetrack/models/: README.md
eyetrack/proto/: eyetrack.proto
eyetrack/src/: main.cpp
eyetrack/src/comm/: auth_middleware.cpp  eyetrack_server.cpp  gateway.cpp  grpc_server.cpp  input_validation.cpp  mqtt_handler.cpp  rate_limiter.cpp  session_manager.cpp  websocket_server.cpp
eyetrack/src/core/: config.cpp  error.cpp  node_registry.cpp  thread_pool.cpp  types.cpp
eyetrack/src/ffi/: eyetrack_ffi.cpp
eyetrack/src/nodes/: blink_detector.cpp  calibration_manager.cpp  eye_extractor.cpp  face_detector.cpp  gaze_estimator.cpp  gaze_smoother.cpp  preprocessor.cpp  pupil_detector.cpp
eyetrack/src/pipeline/: eyetrack_pipeline.cpp  pipeline_context.cpp  pipeline_executor.cpp
eyetrack/src/utils/: calibration_utils.cpp  geometry_utils.cpp  image_utils.cpp  proto_utils.cpp
eyetrack/tests/: CMakeLists.txt
eyetrack/tests/bench/: bench_face_detector.cpp
eyetrack/tests/integration/: test_arm64_cross_compile.sh  test_blink_integration.cpp  test_docker_build.sh  test_face_eye_pipeline.cpp  test_gaze_pipeline_integration.cpp  test_grpc_streaming.cpp  test_mqtt_roundtrip.cpp  test_server_startup.cpp  test_websocket_streaming.cpp
eyetrack/tests/unit/: test_algorithm.cpp  test_auth_middleware.cpp  test_blink_detector.cpp  test_blink_state_machine.cpp  test_calibration.cpp  test_calibration_utils.cpp  test_cancellation.cpp  test_cmake_config.cpp  test_config.cpp  test_ear_computation.cpp  test_error.cpp  test_eye_extractor.cpp  test_eye_fixtures_validation.cpp  test_face_detector.cpp  test_face_detector_dlib.cpp  test_fixtures_validation.cpp  test_gateway.cpp  test_gaze_estimator.cpp  test_gaze_smoother.cpp  test_geometry_utils.cpp  test_grpc_server.cpp  test_image_utils.cpp  test_input_validation.cpp  test_mqtt_handler.cpp  test_node_registry.cpp  test_pipeline_context.cpp  test_pipeline_executor.cpp  test_pipeline_node.cpp  test_preprocessor.cpp  test_proto_serialization.cpp  test_pupil_detector.cpp  test_rate_limiter.cpp  test_scaffolding.cpp  test_session_manager.cpp  test_thread_pool.cpp  test_types.cpp  test_websocket_server.cpp
eyetrack/tools/: generate_eye_fixtures.cpp
iris/: .clang-format  .clang-tidy  .dockerignore  CHECKLIST.md  CMakeLists.txt  CMakePresets.json  Dockerfile  FUTURE_TODO.md  MASTER_PLAN.md  Makefile  QA.md  TESTING.md  VV_REPORT.md  docker-compose.yml  iris  pipeline.yaml  prompts.md  thread-problem.md
iris/comparison/: COMPARISON_REPORT.md  analyze_fhe_results.py  compare_results.py  fhe_comparison.cpp  iris_comparison.cpp  python_baseline.py  save_python_intermediates.py  verify_fhe_builds.sh  visualize_pipeline.py
iris/include/iris/: iris.hpp
iris/src/core/: async_io.cpp  config.cpp  iris_code_packed.cpp  node_registry.cpp  secure_buffer.cpp  thread_pool.cpp
iris/src/crypto/: encrypted_matcher.cpp  encrypted_template.cpp  fhe_context.cpp  key_manager.cpp  key_store.cpp
iris/src/nodes/: batch_matcher.cpp  bisectors_eye_center.cpp  contour_extractor.cpp  contour_interpolator.cpp  contour_smoother.cpp  conv_filter_bank.cpp  cross_object_validators.cpp  eccentricity_offgaze_estimation.cpp  ellipse_fitter.cpp  encoder.cpp  eyeball_distance_filter.cpp  fragile_bit_refinement.cpp  fusion_extrapolator.cpp  gabor_filter.cpp  hamming_distance_matcher.cpp  iris_bbox_calculator.cpp  linear_extrapolator.cpp  linear_normalization.cpp  log_gabor_filter.cpp  majority_vote_aggregation.cpp  moment_orientation.cpp  noise_mask_union.cpp  nonlinear_normalization.cpp  object_validators.cpp  occlusion_calculator.cpp  onnx_segmentation.cpp  perspective_normalization.cpp  pupil_iris_property_calculator.cpp  regular_probe_schema.cpp  segmentation_binarizer.cpp  sharpness_estimation.cpp  specular_reflection_detector.cpp  template_alignment.cpp  template_identity_filter.cpp
iris/src/pipeline/: aggregation_pipeline.cpp  callback_dispatcher.cpp  iris_pipeline.cpp  multiframe_pipeline.cpp  node_dispatcher.cpp  pipeline_dag.cpp  pipeline_executor.cpp
iris/src/utils/: base64.cpp  filter_utils.cpp  geometry_utils.cpp  normalization_utils.cpp  template_serializer.cpp
iris/tests/: CMakeLists.txt
iris/tests/bench/: bench_crypto.cpp  bench_matcher.cpp
iris/tests/comparison/: npy_reader.hpp  npy_writer.hpp  template_npy_utils.hpp
iris/tests/integration/: test_fhe_integration.cpp  test_pipeline_integration.cpp
iris/tests/unit/: test_api_hardening.cpp  test_async_io.cpp  test_base64.cpp  test_batch_matcher.cpp  test_binarization.cpp  test_callback_dispatcher.cpp  test_cancellation.cpp  test_conv_filter_bank.cpp  test_cross_object_validators.cpp  test_encoder.cpp  test_encrypted_matcher.cpp  (+47 more)
src/Face/: CMakeLists.txt  ImageUtils.h  ImageUtils_0.7.cpp  detectObject.cpp  detectObject.h  preprocessFace.cpp  preprocessFace.h  recognition.cpp  recognition.h
src/Iris/: AlignLRPupilPos.cpp  AlignLRPupilPos.h  CMakeLists.txt  CreateTemplate.h  DetectObject.cpp  DetectObject.h  EdgeDensity.cpp  FindPupilCircleNew.h  GetHammingDistance.cpp  GetHammingDistance.h  ImageQuality.cpp  ImageQuality.h  MatchAlg.h  Normalization.cpp  Normalization.h  ProcessFace.cpp  ProcessFace.h
src/IrisAnalysis/: AnScores.cpp  Analysis.h  CMakeLists.txt  GetROC.cpp  GetROC.h  Utility.h
(+209 files in other folders)
